--- a/scss/utilities/_placeholders.scss
+++ b/scss/utilities/_placeholders.scss
@@ -26,7 +26,7 @@
 		display: block;
 	}
 	& a:hover {
-		background-color: $color-primary;
+		background-color: $color-secondary;
 		color: white;
 		border-radius: em(8);
 	}
@@ -43,7 +43,7 @@
 		display: block;
 	}
 	& a:hover {
-		background-color: $color-primary;
+		background-color: $color-secondary;
 		color: white;
 		border-radius: em(8);
 	}
