--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -19,7 +19,6 @@
 }
 
 @keyframes shake {
-
 	10%,
 	90% {
 		transform: translate3d(-1px, 0, 0);
@@ -61,7 +60,6 @@
 	margin: auto;
 }
 
-
 .img--avatar {
 	@extend %blocked;
 	margin: 0 auto;
@@ -86,8 +84,22 @@
 	margin: em(36) auto;
 	transition: .5s ease;
 	backface-visibility: hidden;
+}
 
-	@include mq($large) {
-		display: inline-block;
-	}
+.img--frame__teams {
+	@extend %blocked;
+	opacity: 1;
+	width: em(200);
+	height: em(200);
+	max-width: 100%;
+	margin: em(36) auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
+}
+
+.contact-icons {
+	@extend %blocked;
+	margin: em(24) auto;
+	width: 50px;
+	height: 50px;
 }
