--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -88,7 +88,7 @@ footer {
 }
 
 #mobile-footer-nav a:hover {
-	background-color: $color-primary;
+	background-color: $color-secondary;
 	color: white;
 	border-radius: em(8);
 }
