--- a/scss/base/_slideout.scss
+++ b/scss/base/_slideout.scss
@@ -13,6 +13,10 @@ body {
 	-webkit-overflow-scrolling: touch;
 	z-index: 0;
 	display: none;
+	background: rgb(255, 118, 27);
+	background: linear-gradient(153deg, rgba(255, 118, 27, 1) 0%, rgba(51, 0, 255, 1) 100%);
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 .slideout-menu-left {
