--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -97,6 +97,18 @@
 	backface-visibility: hidden;
 }
 
+.img--frame__roster {
+	@extend %blocked;
+	opacity: 1;
+	width: em(200);
+	height: em(250);
+	max-width: 100%;
+	margin: em(36) auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
+	border-radius: em(12);
+}
+
 .contact-icons {
 	@extend %blocked;
 	margin: em(24) auto;
