--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -118,6 +118,15 @@
 	backface-visibility: hidden;
 }
 
+.img--frame__store {
+	@extend %blocked;
+	opacity: 1;
+	max-width: 100%;
+	margin: em(36) auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
+}
+
 .img--frame__roster {
 	@extend %blocked;
 	opacity: 1;
