--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -53,29 +53,20 @@
 	}
 }
 
-.img--github {
-	@extend %blocked;
-	padding: em(12);
-	margin: em(12) auto;
-	max-width: 100%;
-	transition: transform .4s;
 
-	@include mq($large) {
-		display: inline-block;
-	}
-}
-
-.img--resume {
-	display: block;
-	max-width: 937px;
-	width: 100%;
-	margin: auto;
-}
 
 .img--avatar {
 	@extend %blocked;
 	margin: 0 auto;
 	padding: em(24);
+}
+
+.img--banner {
+	@extend %blocked;
+	padding: em(24);
+	max-width: 100%;
+	opacity: .9;
+	border-radius: 48px;
 }
 
 .sponsors {
