--- a/scss/components/_videos.scss
+++ b/scss/components/_videos.scss
@@ -1,8 +1,22 @@
 .highlight-videos {
-	margin: em(48) auto;
+	margin: em(36);
+
+	@include mq($large) {
+		margin: em(36) em(275);
+	}
 }
 
-.highlight-videos iframe {
+.video-responsive {
+	overflow: hidden;
+	padding-bottom: 56.25%;
+	position: relative;
+	height: 0;
+}
+
+.video-responsive iframe {
+	left: 0;
+	top: 0;
+	height: 100%;
 	width: 100%;
-	height: auto;
+	position: absolute;
 }
