--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,10 +1,12 @@
 // Fonts
 
-$font-family: 'Open Sans', sans-serif;
+$font-family: 'Open Sans',
+sans-serif;
 
 // Colors
 
 $color-background: #e9e9e9;
+
 
 $color-primary: #ff9d00;
 $color-contrast: #0086df;
