--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ body {
 }
 @media (min-width: 1024px) {
   .card {
-    margin: 4em;
+    margin: 4em 18.75em;
   }
 }
 
@@ -790,6 +790,11 @@ body {
   width: 100%;
   left: 0;
   top: 0;
+  text-align: left;
+}
+
+.rslides p {
+  text-align: left;
 }
 
 .rslides li:first-child {
@@ -798,12 +803,32 @@ body {
   float: left;
 }
 
-.rslides img {
+.rslides .news--large {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .rslides .news--large {
+    display: block;
+    height: auto;
+    margin: auto;
+    width: 100%;
+    border: 0;
+    height: auto;
+  }
+}
+
+.rslides .news--mobile {
   display: block;
   height: auto;
-  float: left;
-  width: 100%;
+  margin: auto;
+  width: auto;
   border: 0;
+  height: 250px;
+}
+@media (min-width: 1024px) {
+  .rslides .news--mobile {
+    display: none;
+  }
 }
 
 .highlight-videos {
@@ -945,6 +970,10 @@ body {
 
 .music-note {
   color: #0086df;
+}
+
+.news {
+  text-align: left;
 }
 
 .white {
