--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ body {
     display: flex;
     align-items: center;
     margin: 0 auto;
+    flex-wrap: wrap;
   }
 }
 
@@ -672,6 +673,7 @@ body {
   display: block;
   margin: 2.25em auto;
   max-width: 100%;
+  height: auto;
   transition-duration: 0.4s;
 }
 
