--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -26,6 +26,7 @@ $grid-colors: (3: white, 4: white, 5: white, 6: white, 7: white, 8: white, 12: w
 // Breakpoints
 $medium: 768px;
 $large: 1024px;
-$x-large: 1280px;
+$x-large: 1367px;
+$x-x-large: 1440px;
 // em conversion function default
 $browser-context: 16; // Default
