--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -46,20 +46,32 @@
 	}
 }
 
+@mixin mq($x-large) {
+	@media (min-width: $x-large) {
+		@content;
+	}
+}
+
+@mixin mq($x-x-large) {
+	@media (min-width: $x-x-large) {
+		@content;
+	}
+}
+
 // Flexbox settings
 
 // General Grid Layout
 
 @mixin grid__col {
-	.grid__col--12 {
-		// @include btn-mobile($margin: 0,
-		// 	$padding: 0,
-		// 	$background-color: none,
-		// 	$color: $color-text,
-		// );
-	}
+	// .grid__col--12 {
+	// 	@include btn-mobile($margin: 0,
+	// 		$padding: 0,
+	// 		$background-color: none,
+	// 		$color: $color-text,
+	// 	);
+	// }
 
-	@include mq($large) {
+	@include mq($x-large) {
 		.grid__col--12 {
 			text-align: center;
 		}
