--- a/css/styles.css
+++ b/css/styles.css
@@ -301,8 +301,7 @@ body {
   }
 }
 
-.grid__col--proj,
-.grid__col--skills {
+.grid__col--store {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -314,14 +313,47 @@ body {
   margin-top: 3em;
 }
 @media (min-width: 768px) {
-  .grid__col--proj,
-.grid__col--skills {
+  .grid__col--store {
     flex-direction: row;
-    width: 65%;
+    width: 80%;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: center;
     align-items: stretch;
+  }
+}
+@media (min-width: 1367px) {
+  .grid__col--store {
+    width: 65%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: stretch;
+  }
+}
+
+.grid__col--proj,
+.grid__col--skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+@media (min-width: 768px) {
+  .grid__col--proj,
+.grid__col--skills {
+    flex-direction: column;
+    width: 80%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
   }
 }
 @media (min-width: 1367px) {
@@ -332,7 +364,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: center;
-    align-items: stretch;
+    align-items: center;
   }
 }
 
@@ -375,7 +407,7 @@ body {
 }
 
 .skills--card__store {
-  padding: 0.75em;
+  padding: 0.375em;
   margin: 0.75em;
   flex: 1 22%;
   transition: 0.4s;
